[gd_scene load_steps=10 format=1]

[ext_resource path="res://Inventory/Slot/InvetorySlot.gd" type="Script" id=1]
[ext_resource path="res://Inventory/Slot/Textures/Slot/0.png" type="Texture" id=2]
[ext_resource path="res://Inventory/Items/Textures/ItemsSheet/0.png" type="Texture" id=3]
[ext_resource path="res://Inventory/Slot/Textures/SlotHover/0.png" type="Texture" id=4]
[ext_resource path="res://Inventory/Information/Textures/Background/0.png" type="Texture" id=5]
[ext_resource path="res://Fonts/yoster_island.tres" type="DynamicFont" id=6]
[ext_resource path="res://Inventory/Information/Textures/Button/0.png" type="Texture" id=7]
[ext_resource path="res://Fonts/yoster_island.tres" type="DynamicFontData" id=8]


[sub_resource type="DynamicFont" id=1]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[node name="InvetorySlot" type="Node2D"]

script/script = ExtResource( 1 )

[node name="SlotSprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="ItemSprite" type="Sprite" parent="."]

texture = ExtResource( 3 )
centered = false
region = true
region_rect = Rect2( 0, 0, 28, 28 )

[node name="SlotShadow" type="Sprite" parent="."]

texture = ExtResource( 4 )
centered = false

[node name="Information" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 50.7523, 2.13082 )
z/z = 1

[node name="Back" type="Sprite" parent="Information"]

texture = ExtResource( 5 )
centered = false

[node name="Name" type="Label" parent="Information"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 2.0
margin/right = 122.0
margin/bottom = 16.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Name"
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackSprite" type="Sprite" parent="Information/Name"]

visibility/behind_parent = true
transform/pos = Vector2( 58.4066, 5.13104 )
texture = ExtResource( 7 )

[node name="Type" type="Label" parent="Information"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 10.0
margin/right = 149.0
margin/bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.398438, 1, 1 )
text = "Type"
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Description" type="Label" parent="Information"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 20.0
margin/right = 150.0
margin/bottom = 104.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Description"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackSprite" type="Sprite" parent="Information/Description"]

visibility/behind_parent = true
transform/pos = Vector2( 73.5603, 43.5749 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )


